make debian package work