@@ -10,4 +10,14 @@ packageDescription := """A fun package description of our software,
   with multiple lines."""
 
 import com.typesafe.sbt.packager.archetypes.ServerLoader.Systemd
-serverLoading in Rpm := Systemd
+serverLoading in Debian := Systemd
+
+javaOptions in Universal ++= Seq(
+    "-Dpidfile.path=/dev/null",
+    "-J-XX:MaxRAMFraction=2",
+    "-J-XX:InitialRAMFraction=2",
+    "-J-XX:MaxMetaspaceSize=500m",
+    "-J-XX:+PrintGCDetails",
+    "-J-XX:+PrintGCDateStamps",
+    s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+)
